--- a/styles/style.css
+++ b/styles/style.css
@@ -196,3 +196,118 @@ body{
 	font-weight: 100;
 	text-align: center;
 }
+
+/*//NEW GAME PAGE STYLING*/
+#content{
+	padding-left: 25px;
+}
+
+.single{
+	width: 290px;
+
+}
+
+@media (max-width: 760px){
+	.single{
+		width: 60%;
+		margin: 0 auto;
+	}
+}
+
+#content .product{
+	background: #fff;
+	border: solid 1px #e6e6e6;
+	box-sizing: border-box;
+	margin-bottom: 30px;
+}
+
+#content .product .text p.price{
+	font-size: 18px;
+	text-align: center;
+	font-weight: 300;
+}
+
+#content .product .text .buttons{
+	clear: both;
+	text-align: center;
+}
+
+#content .product .text .h3{
+	text-align: center;
+	font-size: 20px;
+}
+
+#content .product .text h3 a{
+	color: rgb(85, 85, 85);
+}
+
+#content .product .text{
+	padding: 10px 10px 0px; 
+} 
+
+#content .product .text .buttons .btn{
+	margin-bottom: 10px;
+}
+
+/* FOOTER STYLING */
+
+#footer{
+	background: #e0e0e0;
+	padding: 20px 0;
+}
+
+#footer ul{
+	padding-left: 0;
+	list-style: none;
+}
+
+#footer ul a{
+	color: #999999;
+	padding: 20px 0;
+}
+
+#footer .social{
+	text-align: left;
+}
+
+#footer .social a{
+	margin: 0 10px 0 0;
+	color: #fff;
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	border-radius: 15px;
+	line-height: 30px;
+	font-size: 15px;
+	text-align: center;
+	transform: all 0.2sec ease-out;
+	vertical-align: bottom;
+	background-color: #555555;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
