--- a/styles/style.css
+++ b/styles/style.css
@@ -285,6 +285,19 @@ body{
 	background-color: #555555;
 }
 
+/*COPY RIGHT SECTION*/
+
+#copyright{
+	background: #333;
+	color: #ccc;
+	padding: 20px;
+	font-size: 17px;
+}
+
+#copyright p{
+	margin: 0;
+}
+
 
 
 
